--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -29,7 +30,8 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.1",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
