--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.11.4",
     "react": "^18.3.1",
