--- a/front-end/package.json
+++ b/front-end/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.1",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
