--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,37 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.13.0",
-    "ajv-keywords": "^5.1.0",
-    "axios": "^1.7.7",
-    "chart.js": "^4.4.4",
-    "date-fns": "^4.1.0",
-    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.4",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-to-print": "^2.14.1",
-    "styled-components": "^6.1.13",
-    "sweetalert2": "^11.14.4",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
