--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
@@ -40,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "react-to-print": "^3.0.6",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.19.1",
     "tailwind-merge": "^3.2.0",
